--- a/da_day3_practice.ipynb
+++ b/da_day3_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,18 +187,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "RangeIndex(start=0, stop=1704, step=1)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1704 entries, 0 to 1703\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   country    1704 non-null   object \n",
+      " 1   continent  1704 non-null   object \n",
+      " 2   year       1704 non-null   int64  \n",
+      " 3   lifeExp    1704 non-null   float64\n",
+      " 4   pop        1704 non-null   int64  \n",
+      " 5   gdpPercap  1704 non-null   float64\n",
+      "dtypes: float64(2), int64(2), object(2)\n",
+      "memory usage: 80.0+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -206,7 +215,9 @@
     "gapminder.shape  #(1704, 6)\n",
     "type(gapminder)  #pandas.core.frame.DataFrame\n",
     "gapminder.columns  #Index(['country', 'continent', 'year', 'lifeExp', 'pop', 'gdpPercap'], dtype='object')\n",
-    "gapminder.index  #RangeIndex(start=0, stop=1704, step=1)"
+    "gapminder.index  #RangeIndex(start=0, stop=1704, step=1)\n",
+    "gapminder.dtypes  #각 열의 자료형태(object(문자열), int64, float64 등)\n",
+    "gapminder.info()  #파이썬의 str 함수와 비슷한 함수(데이터건수, 열 개수, 구조, 결측값 존재 유무까지)"
    ]
   },
   {
